[package]
authors = ["Sergei S. <div@altertech.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
embedded-hal = "^0.2.4"
panic-halt = "^0.2.0"
rmodbus = { version = "0.3.9", features = ["nostd", "smallcontext", "single"] }
fixedvec = "0.2.4"
stm32f1 = { version = "0.6.0", features = ["stm32f103", "rt"] }

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"

[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1
features = ["stm32f103", "rt", "medium"]
lto = true
